# quota-db

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
benches/: redis_comparison.rs  throughput.rs
docker/: Dockerfile  docker-compose.cluster.yml  docker-compose.yml  quota-db
docs/benchmarks/: phase5-benchmark-results.md
docs/plans/: 2025-12-26-anti-entropy-design.md  2025-12-26-anti-entropy-implementation.md  2025-12-26-escrow-quota-design.md  2025-12-26-persistence-design.md  2025-12-26-phase2-replication-design.md  2025-12-27-persistence-implementation.md
scripts/: bench.sh  install.sh  quick-bench.py
src/: config.rs  error.rs  lib.rs  main.rs
src/engine/: db.rs  entry.rs  mod.rs  quota.rs  shard.rs
src/metrics/: histogram.rs  mod.rs  server.rs
src/persistence/: async_wal.rs  config.rs  manager.rs  mod.rs  recovery.rs  snapshot.rs  wal.rs
src/pool/: buffer.rs  mod.rs
src/protocol/: command.rs  encoder.rs  frame.rs  mod.rs  parser.rs
src/replication/: anti_entropy.rs  cluster_state.rs  delta.rs  digest.rs  log.rs  manager.rs  mod.rs  peer.rs  protocol.rs  quota_service.rs
src/server/: connection.rs  handler.rs  listener.rs  mod.rs
src/types/: key.rs  mod.rs  node_id.rs
